@@ -2,14 +2,6 @@
 # -*- makefile -*-
 # Debhelper build instructions for timelimit.
 
-CFLAGS = -Wall -g
-
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-
 build: build-stamp
 
 build-stamp:
