@@ -3,11 +3,14 @@ timelimit (1.1-3) unstable; urgency=low
   * Fix the watchfile
   * Remove the $Ringlet VCS tags from the watchfile and the rules file
   * Bump standards version to 3.8.0 (no changes)
+  * Leave "noopt" and "nostrip" option processing to dpkg-buildpackage
 
   * debian/control
     - standards version 3.8.0 (no changes)
   * debian/rules
     - remove the $Ringlet VCS tag
+    - let dpkg-buildpackage handle the "noopt" and "nostrip" options and
+      set the default CFLAGS
   * debian/watch
     - remove a blank line so that the first non-comment line is indeed
       the "version" one as uscan requires
